Updated Background, started working on the Embeds. Check photos.

--- a/style.css
+++ b/style.css
@@ -7,19 +7,23 @@ h1 {
   text-align: center;
 }
 
+.songCount {
+  display: inline;
+}
+
 .display {
   display: flex;
   justify-content: space-around;
-  border-top: 5px solid black;
-  border-bottom: 5px solid black;
+  border-top: 5px solid blueviolet;
+  border-bottom: 5px solid blueviolet;
   padding: 25px
 }
 
 .heading {
   display: flex;
   justify-content: space-around;
-  border-top: 5px solid black;
-  background-color: rgba(76, 175, 80, 0.3)
+  border-top: 5px solid blueviolet;
+  background-color: purple;
 }
 
 @media screen and (max-width: 600px) {
@@ -76,10 +80,10 @@ button {
 }
 
 body {
-  background: url(https://i.pinimg.com/originals/b8/4f/41/b84f4195a6d33c93d01111287c0c7b7e.jpg);
-color: white;
+  background: black;
+color: blueviolet;
 }
 
 h4{
-  color: white;
+  color: blue;
 }
